semantic/src/test_cases/good/test6.cl
(* Type annotations of constants *)

class A {
    f1() : Int {
        {
            0;
            true;
            "This is a string";
            0123;
        }
    };
};

class Main {
    main() : Int {
        0
    };
};
