semantic/src/test_cases/bad/test25.cl
(* main() defined in an inherited class of Main *)

class Main {
    a : Int;
};

class A inherits Main {
    main() : Int {
        0
    };
};
